diesel_compile_tests/tests/fail/join_with_explicit_on_requires_valid_boolean_expression.stderr
error[E0271]: type mismatch resolving `<diesel::query_source::joins::Join<users::table, posts::table, Inner> as AppearsInFromClause<comments::table>>::Count == diesel::query_source::Once`
  --> $DIR/join_with_explicit_on_requires_valid_boolean_expression.rs:31:26
   |
31 |     let _ = users::table.inner_join(posts::table.on(users::id.eq(comments::id)));
   |                          ^^^^^^^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<users::table, posts::table, Inner>>` for `comments::columns::id`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<users::table, posts::table, Inner>>` for `Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>`
   = note: required because of the requirements on the impl of `QuerySource` for `JoinOn<diesel::query_source::joins::Join<users::table, posts::table, Inner>, Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<JoinOn<diesel::query_source::joins::Join<users::table, posts::table, Inner>, Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>>`
   = note: required because of the requirements on the impl of `AsQuery` for `SelectStatement<JoinOn<diesel::query_source::joins::Join<users::table, posts::table, Inner>, Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>>`
   = note: required because of the requirements on the impl of `InternalJoinDsl<posts::table, Inner, Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>` for `SelectStatement<users::table>`

error[E0277]: the trait bound `diesel::sql_types::Integer: BoolOrNullableBool` is not satisfied
  --> $DIR/join_with_explicit_on_requires_valid_boolean_expression.rs:33:26
   |
33 |     let _ = users::table.inner_join(posts::table.on(users::id));
   |                          ^^^^^^^^^^ the trait `BoolOrNullableBool` is not implemented for `diesel::sql_types::Integer`
   |
   = note: required because of the requirements on the impl of `QuerySource` for `JoinOn<diesel::query_source::joins::Join<users::table, posts::table, Inner>, users::columns::id>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<JoinOn<diesel::query_source::joins::Join<users::table, posts::table, Inner>, users::columns::id>>`
   = note: required because of the requirements on the impl of `AsQuery` for `SelectStatement<JoinOn<diesel::query_source::joins::Join<users::table, posts::table, Inner>, users::columns::id>>`
   = note: required because of the requirements on the impl of `InternalJoinDsl<posts::table, Inner, users::columns::id>` for `SelectStatement<users::table>`
